--- a/ocmoni6/html/mileageExchangeEdit.html
+++ b/ocmoni6/html/mileageExchangeEdit.html
@@ -69,6 +69,7 @@
                     <div class="pure-u-1-4">
                         <input type="text" id ="id1" class="form-control"  placeholder="序列号">
                     </div>
+                    <i class="glyphicon glyphicon-asterisk red table_control"></i>
                 </div>
 
                 <div class="form-group">
@@ -77,6 +78,7 @@
                         <input type="text" id="id2" class="form-control datepicker"  placeholder="生效日期">
                     </div>
                     <label for="id2" class="glyphicon glyphicon-th iconfont_box"></label>
+                    <i class="glyphicon glyphicon-asterisk red table_control"></i>
                 </div>
 
                 <div class="form-group">
@@ -92,6 +94,7 @@
                     <div class="pure-u-1-4">
                         <input type="text" class="form-control"  placeholder="基准货币类型">
                     </div>
+                    <i class="glyphicon glyphicon-asterisk red table_control"></i>
                 </div>
 
                 <div class="form-group">
@@ -99,6 +102,7 @@
                     <div class="pure-u-1-4">
                         <input type="text" class="form-control"  placeholder="兑换系数">
                     </div>
+                    <i class="glyphicon glyphicon-asterisk red table_control"></i>
                 </div>
 
 
@@ -117,6 +121,7 @@
                     <div class="pure-u-1-4">
                         <input type="text" class="form-control"  placeholder="服务子代码">
                     </div>
+                    <i class="glyphicon glyphicon-asterisk red table_control"></i>
                 </div>
 
                 <div class="form-group">
