新页面第一版修改完成

--- a/ocmoni6/html/validate.html
+++ b/ocmoni6/html/validate.html
@@ -332,6 +332,15 @@
                         </div>
                     </div>
 
+                    <div class="form-group">
+                        <label  class="pure-u-1-8 control-label">office号</label>
+                        <div class="pure-u-1-4">
+                            <input type="text" class="form-control input-sm"/>
+                        </div>
+                        <i class="glyphicon glyphicon-exclamation-sign"></i>
+                        <span class="text-warning">按公布运价百分比计算时，请务必填写</span>
+                    </div>
+
                     <div class="form-group fpdaterange">
                         <label  class="pure-u-1-8 control-label">免费行李</label>
                         <div class="pure-u-1-4">
